# ODIA

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  OCR_ENHANCEMENT_SUMMARY.md  PHASE10_OVERVIEW.md  PHASE12_IMPLEMENTATION_SUMMARY.md  PHASE15_OVERVIEW.md  PHASE18_OVERVIEW.md  PHASE19_OVERVIEW.md  PHASE5_SUMMARY.md  PHASE8_ORCHESTRATOR_IMPLEMENTATION.md  PHASE8_SUMMARY.md  PHASE9_GOVERNOR_IMPLEMENTATION.md  PHASE9_POLICY_REFERENCE.md  PR55_SECURITY_SUMMARY.md  QUICKSTART.md  RAG_IMPLEMENTATION_SUMMARY.md  README.md  VALIDATION_REPORT.md  audit_manifest.schema.json  compliance_checklist.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  pyrightconfig.json  report_config.example.json  requirements.txt
.github/ISSUE_TEMPLATE/: audit_finding.md
.github/workflows/: pre-commit.yml  python-ci.yml
analysis/: README.md
config/: agencies.example.json  defaults.yaml  jurisdiction.example.json  legistar_cities.json  ocr_config.py  ollama_config.yaml  rag_config.py  source_urls.example.json
constitutional/: CONSTITUTIONAL_LINGUISTIC_FRAMEWORKS.json
data/cases/: ca_civil_code_1950_5.json  example1.json  example2.json  us_constitution_article1.json  usc_42_1983.json
data/multi_jurisdiction/: README.md
data/reference/: atlas_sample.json
docs/: ARCHITECTURE.md  AUTOMATED_AUDIT.md  COMPLIANCE_FRAMEWORK.md  DATA_POLICY.md  DATA_PROVENANCE.md  GEOPOLITICAL_LEGAL_HISTORY.md  LEGAL_REFERENCE.md  MULTI_JURISDICTION.md  OCR_SETUP.md  ORACULUS_OVERVIEW.md  PHASE5_ORCHESTRATION.md  PHASE6_FRONTEND.md  PHASE6_INGESTION.md  PHASE7_CORPUS.md  PHASES.md  PHASE_PLAN.md  PROVENANCE.md  PUBLIC_OVERVIEW_CASE_EXPANSION_V2.md  RAG_SETUP.md  README.md  SOCIOECONOMIC_LEGAL_FOUNDATIONS.md  ace_overview.md  audit-methodology.md  caim_overview.md  case_law_alignment.md  cdsce_overview.md  constitutional_linguistic_frameworks.md  constitutional_risk_model.md  contradiction_classification.md  corpus_structure_map.md  database-design.md  developer-setup.md  development-workflow.md  etymology_overview.md  etymology_schema_reference.md  jim_overview.md  judicial_doctrines_reference.md  legal_discovery_fulfillment.md  lexicon_overview.md  lexicon_schema_reference.md  (+8 more)
docs/phases/: PHASE11_OVERVIEW.md  PHASE12_OVERVIEW.md  PHASE13_OVERVIEW.md  PHASE14_OVERVIEW.md  PHASE16_OVERVIEW.md  PHASE17_OVERVIEW.md  PHASE17_SECURITY_SUMMARY.md  PHASE19_SECURITY_SUMMARY.md  PHASE20_OVERVIEW.md  PHASE20_SECURITY_SUMMARY.md  PHASE6_SUMMARY.md  PHASE7_IMPLEMENTATION.md  PHASE7_SECURITY_SUMMARY.md  PHASE9_SECURITY_PROFILE.md  PHASE9_SUMMARY.md
extraction/: README.md
frontend/: README.md  jest.config.ts  jest.setup.ts  package.json  tsconfig.test.json
frontend/app/: layout.tsx  page.tsx
frontend/public/: manifest.json  sw.js
legal/: LEGISLATIVE_CANON_MAP.json  STATUTORY_ALIGNMENT_REPORT.md
legal/cases/: CASE_LAW_EXPANSION_INDEX.json  CLEP_CORRELATION_GRAPH.json  CLEP_SUMMARY.md  JIM_CASE_EXPANSION_V2.json  SCOTUS_INDEX.json  ala_schechter_poultry_corp_v_united_states_1935.json  arlington_central_school_district_v_murphy_2006.json  auer_v_robbins_1997.json  birchfield_v_north_dakota_2016.json  bivens_v_six_unknown_named_agents_1971.json  board_of_regents_v_roth_1972.json  bond_v_united_states_2011.json  brown_v_texas_1979.json  buckley_v_valeo_1976.json  carpenter_v_united_states_2018.json  chevron_usa_v_natural_resources_defense_council_1984.json  citizens_to_preserve_overton_park_v_volpe_1971.json  city_of_canton_v_harris_1989.json  (+68 more)
manifests/: README.md
queries/: sample_queries.json
schemas/: ace_report_schema.json  cdsce_schema.json  corpus_manifest_schema.json  corpus_metadata_schema.json  divergence_index_schema.json  forensic_report_schema.json  ingestion_report_schema.json  jim_report_schema.json  legal_schema.json  semantic_matrix_schema.json  validation_report_schema.json  vendor_anomaly_links_schema.json  vendor_graph_schema.json
scripts/: __init__.py  _utils.py  ace_analyzer.py  agency_map_extractor.py  audit_corpora.py  auto_issue_generator.py  automated_audit.py  build_clf_frameworks.py  bulk_pdf_extract.py  contract_flow_map.py  corpus_manager.py  cross_agency_influence.py  cross_platform_normalize.py  docker-entrypoint.sh  docker-nginx.conf  docker-supervisord.conf  docker_build.sh  eval_harness.py  fetch_documents.py  fix_format.py  flag_manual_review_queue.py  generate_caim_reports.py  generate_plaintext_audit.py  generate_timeline.py  generate_transparency_package.py  hash_reconciliation.py  ingest_and_index.py  ingest_corpus.py  interdepartmental_matrix.py  ocr_engine.py  ocr_sample.py  orchestrate_full_audit.py  orchestrator.py  path_resolver.py  pdf_extractor.py  pdf_metadata.py  pdf_preprocessor.py  phase12_example.py  phase14_example.py  phase16_example.py  (+32 more)
templates/: audit_report.md  audit_report_executive.md  multi_jurisdiction_report.md  report_template.md  temporal_report.md
tests/: test_adapter_base.py  test_adaptive_mesh.py  test_administrative_integrity.py  test_analyzer_module.py  test_api_detectors.py  test_api_integration.py  test_atlas_adapter.py  test_audit_engine.py  test_audit_workflow_integration.py  test_auth.py  test_auto_classify.py  test_automated_audit.py  test_basic.py  test_case_law_builder.py  test_ccops_adapter.py  test_checksum.py  test_comparative_report.py  test_compliance_api.py  test_compliance_cli.py  test_compliance_engine.py  test_constitutional_detector.py  test_constraint_agent_rules.py  test_context_builder.py  test_corpus_full_scan.py  test_corpus_ingestion.py  test_corpus_manager.py  test_corpus_manifest_populated.py  test_cross_jurisdiction_patterns.py  test_cross_reference.py  test_database_adapters.py  test_definition_extractor.py  test_embeddings_module.py  test_evidence_packet.py  test_evolution.py  test_evolution_detector.py  test_fiscal_detector.py  test_format_converters.py  test_gcn_service.py  test_gcn_validators.py  test_governance_gap.py  (+65 more)
tools/: import_examples.sh  make_local_env.ps1
(+383 files in other folders)
